--- a/TermProject/Views/Shared/LoginLayout.cshtml
+++ b/TermProject/Views/Shared/LoginLayout.cshtml
@@ -63,7 +63,7 @@
             <button type="submit" id="btnLogin" class="btn btn-danger">Login</button>
         </form>
 
-        <form asp-controller="Logout" asp-action="Index" method="post">
+        <form asp-controller="SignUp" asp-action="Index" method="post">
             <button type="submit" id="btnSignup" class="btn btn-danger m-3">Sign-up</button>
         </form>
     </nav>
